# First_Praktice_2024

./: CMakeLists.txt  Database.cpp  Database.h  QueryProcessor.cpp  QueryProcessor.h  README.md  Table.cpp  Table.h  main.cpp  schema.json
